--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "Backend for the multiplayer card game",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "serv": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
